# emsdk_swift

./: .gitignore  CMakeLists.txt  README.md
.sourcekit-lsp/: config.json
src/: main.cpp
swift/: CMakeLists.txt  add.swift  hello.swift
swift_package/: Package.swift  README.md
swift_package/Sources/emscripten/: emscripten_asm.h  module.modulemap
swift_package/Sources/hello/: add.swift  emsdk_stubs.swift  hello.swift
swift_package/Tests/tapTests/: tapTests.swift
